# rpi-camera

./: .gitattributes  CLAUDE.md  FEATURE_REQUESTS.md  MANIFEST.in  README.rst  initialize_dev_environmenvt.sh  pyproject.toml  reboot_on_lost_wifi.sh  reboot_on_wifi_disconnect.sh  rpi-camera.service  setup.cfg  setup.py
.github/: python-package.yml
.github/workflows/: codeql.yml  python-package.yml  python-publish.yml
meltingplot/rpi-camera/: server.py
meltingplot/rpi_camera/: __main__.py  _version.py  controls.py  gadget_configfs.py  reconfig.py  server.py  uvc_controls.py  uvc_gadget.py
meltingplot/rpi_camera/cli/: install.py
meltingplot/rpi_camera/web/: index.html
tests/: test_controls.py  test_gadget_configfs.py  test_reconfig.py  test_server_resolution.py  test_uvc_controls.py  test_watchdog.py
